syntax = "proto3";

package tpm.attestation;
option java_package = "de.fhg.iosb.iad.tpm.attestation";
option java_multiple_files = true;

// Enum that describes the type of the protocol.
enum ProtocolType {
  UNKNOWN_PROTOCOL = 0;
  TPM_TAP          = 1;
  TPM_TAP_UNI      = 2;
  TPM_TAP_SSL      = 3;
  TPM_TAP_DH       = 4;
  TPM_MSCP         = 5;
}

// Enum that describes the type of a protocol message.
enum ProtocolMessageType {
  UNKNOWN_MESSAGE          = 0;
  ABORT_MESSAGE            = 1;
  CLIENT_INIT              = 2;
  SERVER_INIT              = 3;
  CLIENT_ATTESTATION       = 4;
  SERVER_ATTESTATION       = 5;
  CLIENT_FINISH            = 8;
  SERVER_FINISH            = 9;
  CLIENT_SUCCESS           = 10;
}

// A protocol message. The message type is given by |type|.
message ProtocolMessage {
  ProtocolMessageType type                     = 1;
  oneof message {
    AbortMessage abort                         = 2;
    InitMessage init                           = 3;
    AttestationMessage attestation             = 4;
    FinishMessage finish                       = 6;
    SuccessMessage success                     = 7;
  }
}

message AbortMessage {
  enum ErrorCode {
    // Unknown error.
    UNKNOWN_ERROR     = 0;
    // Internal protocol error. Indicates a bug.
    INTERNAL_ERROR    = 1;
    // Error while reading or writing messages.
    IO_ERROR          = 2;
    // Error while accessing the TPM.
    TPM_ERROR         = 3;
    // Peer does not accept the requested protocol type.
    BAD_PROTOCOL_TYPE = 4;
    // Received message is bad.
    BAD_MESSAGE       = 5;
    // Received PCR selection does not match the request.
    BAD_PCR_SELECTION = 6;
    // Received quote does not verify correctly.
    BAD_QUOTE         = 7;
     // Received certificate does not verify correctly.
    BAD_CERT          = 8;
    // Calculated HMAC does not match.
    BAD_HMAC          = 9;
}
  ErrorCode code = 1;
  string message = 2;
}

message InitMessage {
  // Protocol type.
  ProtocolType protocol_type    = 1;
  // Nonce to use in the attestation.
  bytes nonce                   = 2;
  // PCR selection to attest.
  repeated uint32 pcr_selection = 3;
}

message AttestationMessage {
  // Signed quote that includes the requested PCR selection.
  bytes quote                    = 1;
  // Public part of the used quoting key.
  bytes quoting_key              = 2;
  // PCR values that are included in the quote.
  map<uint32, string> pcr_values = 3;
  // Public key that should be used to authenticate the key establishment. May be empty if protocol does not include key establishment.
  bytes public_key               = 4;
  // Certification structure that authenticates the public key. May be empty if protocol does not use a certificate in the key establishment.
  bytes certificate              = 5;
}

message FinishMessage {
  // HMAC over the shared secret.
  bytes hmac    = 1;
  // Random shared initialization vector.
  bytes iv      = 2;
}

message SuccessMessage {
}